# step

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: pypi-publish.yml  tests.yml
examples/: README.md
examples/01_my_expenses/: README.md  cli_my_expenses.py  extended_cli_my_expenses.py
step/: cli.py  external_cli.py  markdown.py  step.py
step/templates/: cli.py.template  command.py.template  sub_steps.py.template
tests/: test_cli.py  test_markdown.py  test_step.py
tests/fixtures/: deploy.py  manual_deploy.md
