[tool.poetry]
name = "step"
version = "0.1.0"
description = "The first step to automate things; from a Markdown into a CLI"
authors = ["Ana Paula Gomes <1899950+anapaulagomes@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
mdformat = "^0.7.16"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pre-commit = "^3.3.2"
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
step = "step.cli:app"
